hphp/hack/test/typecheck/constraints/typedef2.php
<?hh // strict

interface Constraint<T as num> {}

type AliasConstraint = Constraint<mixed>;
